--- a/quick_demo_tdlr.ipynb
+++ b/quick_demo_tdlr.ipynb
@@ -5,8 +5,6 @@
     "colab": {
       "name": "quick_demo_tdlr.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPb4R1PTR2YSS24nlUOTul6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,7 +86,8 @@
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
             "layout": "IPY_MODEL_422e4dc6267b4717a3cb075376761645"
-          }
+          },
+          "model_module_version": "1.5.0"
         },
         "9bbc2a0602734ef7929d0ae34849b8b7": {
           "model_module": "@jupyter-widgets/controls",
@@ -102,7 +101,8 @@
             "_view_count": null,
             "_view_module_version": "1.2.0",
             "_model_module": "@jupyter-widgets/controls"
-          }
+          },
+          "model_module_version": "1.5.0"
         },
         "422e4dc6267b4717a3cb075376761645": {
           "model_module": "@jupyter-widgets/base",
@@ -153,7 +153,8 @@
             "margin": null,
             "display": null,
             "left": null
-          }
+          },
+          "model_module_version": "1.2.0"
         }
       }
     }
@@ -166,7 +167,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/yzhou359/MakeItTalk/blob/main/quick_demo_tdlr.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/albertotrunk/MakeItTalkColabFix/blob/main/quick_demo_tdlr.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -669,9 +670,7 @@
       "metadata": {
         "id": "P0etBPyAC1e7"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
